reworked article styles entirely, fixed scrollbar issue, removed article-top, intro-card from article template, fixed grid lines on index

--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -20,6 +20,7 @@ body {
     z-index: 0;
 }
 
+
 #index-link {
     text-decoration: none;
 }
@@ -114,11 +115,17 @@ body {
 
 #article-top {
     position: relative;
-    grid-column: 1 / 4;
-    grid-row: 1 / 2;
     display: flex;
+    max-width: 72.5%;
+    max-height: 100vh;
     flex-wrap: wrap;
     background-color: #FFFFFF;
+    overflow: scroll;
+}
+
+.article-item {
+    position: relative;
+    overflow: scroll;
 }
 
 #bg-top > * {
@@ -126,13 +133,16 @@ body {
     background-color: #ffffff;
     color: #000000;
     width: 30%;
+    height: 120vh;
     border-left: 1px solid #000000;
+    border-bottom: 1px solid #000000;
 }
 
 #intro-card {
     position: relative;
-    width: 69.8%;
-    max-height: 60vh;
+    width: 100%;
+    border-bottom: 1px solid #000000;
+    overflow-y: scroll;
 }
 
 #intro-card > * {
@@ -145,7 +155,6 @@ body {
 
 .intro-item {
     position: relative;
-    height: 50%;
 }
 
 .intro-item > div {
@@ -167,14 +176,14 @@ body {
 #article-citations {
     position: fixed;
     right: 0%;
-    background-color: #EEEEEE;
+    top: 0%;
+    background-color: #ffffff;
     color: #000000;
     height: 100vh;
     width: 27%;
-    border-left: 1px solid #000000;
-    border-top: 1px solid #000000;
-    direction: rtl;
+    border-left: 10px solid #EEEEEE;
     overflow-y: scroll;
+    
 }
 
 .back-text {
@@ -197,7 +206,6 @@ body {
     position: relative;
     min-height: 33%;
     max-height: 100%;
-    width: 100%;
     background-color: #000000;
     background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='3' height='3' viewBox='0 0 55 55' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3ctext x='10' y='10' fill='whitesmoke'%3ealbedo%3c/text%3e%3c/svg%3e ");
     transition: .5s ease;
@@ -275,7 +283,7 @@ body {
     background-color: #000000;
     background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='3' height='3' viewBox='0 0 55 55' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3ctext x='10' y='10' fill='whitesmoke'%3ealbedo%3c/text%3e%3c/svg%3e ");
     transition: .5s ease;
-
+    margin: 10px;
 }
 
 .article-heading {
@@ -308,6 +316,7 @@ body {
 .article-date {
     position: relative;
     min-height: 20%;
+    width: 95%;
     font-family: "Merriweather", sans-serif;
     color: #FFFFFF;
     font-size: 10px;
@@ -332,6 +341,7 @@ body {
 .article-text {
     position: relative;
     padding: 30px;
+    padding-right: 50px;
     font-family: "Merriweather", sans-serif;
     font-size: 14px;
     line-height: 200%;
@@ -429,13 +439,11 @@ body {
 .reference-container {
     position: relative;
     display: inline-block;
-    width: 100%;
+    width: 99.5%;
     margin: 0 auto;
     margin-bottom: 20px;
-    direction: ltr;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
     border-left: 3px solid #99BEB1;
-    border-bottom: 1px solid #99BEB1;
     background-color: #FFFFFF;
 }
 
@@ -453,7 +461,7 @@ body {
 .reference-text {
     position: relative;
     font-family: 'Nunito', sans-serif;
-    font-size: 14px;
+    font-size: 12px;
     padding-left: 10px;
     padding-right: 5px;
     text-align: justify;
@@ -490,10 +498,8 @@ body {
     position: relative;
     width: 95%;
     margin: 0 auto;
-    margin-top: 20px;
+    padding-top: 20px;
     justify-content: space-evenly;
-    background-color: #EEEEEE;
-    border-left: 3px solid #99BEB1;
 }
 
 .stack-main {
@@ -742,6 +748,10 @@ body {
 
     #intro-card {
         width: 100%;
+    }
+
+    #article-top {
+        min-width: 100%;
     }
 
     .intro-item {
